2003-04-21  Dennis Cranston <dennis_cranston at yahoo com>

	* themes.c:  HIGify the preference dialog.

2003-04-21  Kevin Vandersloot <kfv101@psu.edu>

	* themes.c: fix small memory leak from previous patch. Thanks to Pasupathi
	Duraisamy.

2003-04-19  Kevin Vandersloot <kfv101@psu.edu>

	* geyes.c: themes.c: handle theme directories not configuree properly. Fixes bug
	#110852

2003-03-22  Kevin Vandersloot <kfv101@psu.edu>

	* geyes.c: another optimization. Don't update the applet if the cursor hasn't moved.

2003-03-15  Kevin Vandersloot <kfv101@psu.edu>

	* geyes.c: small optimization of display and use GtkImage to get rid
	of flashing.

2003-03-07  Mark McLoughlin  <mark@skynet.ie>

	* geyes.c: (help_cb):
	* themes.c: (phelp_cb): update for screen-exec changes.

2003-01-21  Arvind Samptur <arvind.samptur@wipro.com>
	* geyes.c (destroy_cb): Destroy the preferences dialog
	when the applet is destroyed.

2002-12-14  Fernando Herrera <fherrera@onirica.com>

	* GNOME_GeyesApplet.server.in.in: added bugzilla attributtes

2002-10-29  Rajkumar Sivasamy  <rajkumar.siva@wipro.com>

	* themes.c: Change the preferences list's mnemonic 
	to <Alt>+T. Fixes #92483

2002-09-24  Muktha  <muktha.narayan@wipro.com>
	
	* themes.c: add colon at the end of 'Theme Name'
	label. Fixes #94035.

2002-09-20  Mark McLoughlin  <mark@skynet.ie>

	* themes.c: (properties_cb): fixup a silly
	that cauased the dialog to not be realised
	on the correct screen. Fixes #93397.

2002-09-19  Mark McLoughlin  <mark@skynet.ie>

	* geyes.c: (about_cb), (help_cb):
	* themes.c: (phelp_cb), (properties_cb): kill the
	HAVE_GTK_MULTIHEAD conditionals - we require gtk
	HEAD now.

2002-09-13  Kjartan Maraas  <kmaraas@gnome.org>

	* geyes.c (applet_back_change): Don't leak the style.
	
2002-08-14  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: link against libscreen-exec.la.

	* geyes.c: (help_cb):
	* themes.c: (phelp_cb): use the multiscreen
	gnome_help variants.
