@@ -1,3 +1,8 @@
+2003-04-26  Dennis Cranston <dennis_cranston at yahoo com>
+
+	* themes.c:  More HIGification of the preferences dialog: adds 
+	a proper mnemonic label to the listview.
+
 2003-04-21  Dennis Cranston <dennis_cranston at yahoo com>
 
 	* themes.c:  HIGify the preference dialog.
